--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Surplus • TodoMVC</title>
-		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
-		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<link rel="stylesheet" href="../node_modules/todomvc-common/base.css">
+		<link rel="stylesheet" href="../node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
 		<!-- Scripts here. Don't remove ↓ -->
-		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="dist/main.js"></script>
-	</body>
+		<script src="../node_modules/todomvc-common/base.js"></script>
 </html>
